clusters/cobbler/gatus/gatus-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus-ui
  namespace: gatus
spec:
  parentRefs:
    - name: external
      namespace: external-gateway
  hostnames:
    - status.joshgordon.app
  rules:
    - backendRefs:
        # Service created by the Longhorn chart in longhorn-system.
        - name: gatus
          port: 8080
